--- a/Project 04 - SnapChatMenu/app/src/main/AndroidManifest.xml
+++ b/Project 04 - SnapChatMenu/app/src/main/AndroidManifest.xml
@@ -17,5 +17,7 @@
             </intent-filter>
         </activity>
     </application>
-
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
+    <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
 </manifest>
