--- a/Project 07 - PullToRefresh/app/src/main/AndroidManifest.xml
+++ b/Project 07 - PullToRefresh/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.heath.findmylocation">
+    package="com.heath.pulltorefresh">
 
     <application
         android:allowBackup="true"
@@ -18,7 +18,4 @@
         </activity>
     </application>
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
