--- a/Project 10 - VideoBackground/app/build.gradle
+++ b/Project 10 - VideoBackground/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.heath.imagescroller"
+        applicationId "com.heath.videobackground"
         minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
@@ -19,9 +19,8 @@ android {
 }
 
 dependencies {
-    implementation "io.reactivex.rxjava2:rxjava:2.2.2"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
